# homework1-C

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
Hw/: CMakeLists.txt  Instruction  main.c  sorting.c  sorting.h  sorting.s
StackBr/: CMakeLists.txt  StackBrackets.c  StackBrackets.h  main.c
cmake/: CMakeLists.txt
compilationHW/: array0.c  brackets.c  substring.c
compilationHW/array/: CMakeLists.txt  array0.c  array0.h  main.c
compilationHW/brackets/: CMakeLists.txt  brackets.c  brackets.h  main.c
compilationHW/substring/: CMakeLists.txt  main.c  substring.c  substring.h
control/: gnomeSort.c  palindrome.c
countHW/: CMakeLists.txt  count.c  count.h  main.c
cw/: CMakeLists.txt  compare.c  compare.h  main.c
dataHW/: CMakeLists.txt  Lib.c  Lib.h  main.c
double/: CMakeLists.txt  Double.c  Double.h  main.c
doubleHW/: Double.c  Double.h  main.c
hello/: CMakeLists.txt  hiWorld.c
hw/: count.c  count.h  main.c
hw1/: CMakeLists.txt  list.c  list.h  lists.c  main.c
sorting/: CMakeLists.txt  SortingStation.c  SortingStation.h  main.c
src/: lucky_tickets.c  polynomial.c  quotient.c
src/array/: CMakeLists.txt  array.c  array.h  main.c
src/lucky/: CMakeLists.txt  (+1 more)
stHW/: CMakeLists.txt  SortStation.c  SortStation.h  main.c
stack/: stack.c  stack.h
stackBr/: CMakeLists.txt  StackBr.c  StackBr.h  main.c
stackHW/: Stack.c  Stack.h
styleguide/: lucky_ticket.c  quotient
task2/: CMakeLists.txt  main2.c  task2.c  task2.h
tasks/: CMakeLists.txt  main3.c  task3.c  task3.h
test_list/: test.c
(+12 files in other folders)
